# WololoKingdoms

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  WK.xml  WK_African_Kingdoms.xml  WololoKingdoms.exe.manifest  WololoKingdoms.files  WololoKingdoms.includes  WololoKingdoms.pro  WololoKingdoms.sh  age2_x1.xml  appveyor.yml  conversions.cpp  conversions.h  dialog.cpp  dialog.h  dialog.ui  language.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  music.m3u  paths.cpp  paths.h  paths_linux.cpp  player1.nfz  player2.nfz  ui_dialog.h  ui_mainwindow.h  wkconverter.cpp  wkconverter.h  wkgui.h  wkinstaller.cpp  wkinstaller.h  wksettings.h
.github/: dependabot.yml
.github/workflows/: ci.yml
Script.RM/: WK_Green_Arabia.rms
fixes/: ai900unitidfix.cpp  ai900unitidfix.h  berbersutfix.cpp  berbersutfix.h  burmesefix.cpp  cuttingfix.cpp  demoshipfix.cpp  demoshipfix.h  disablenonworkingunits.cpp  disablenonworkingunits.h  ethiopiansfreepikeupgradefix.cpp  ethiopiansfreepikeupgradefix.h  feitoriafix.cpp  hotkeysfix.cpp  hotkeysfix.h  incafix.cpp  incafix.h  khmerfix.cpp  malayfix.cpp  malayfix.h  maliansfreeminingupgradefix.cpp  maliansfreeminingupgradefix.h  portuguesefix.cpp  portuguesefix.h  siegetowerfix.cpp  smallfixes.cpp  smallfixes.h  tricklebuildingfix.h  vietfix.cpp  vietfix.h
include/genie/: Types.h
include/genie/dat/: Civ.h  DatFile.h  Graphic.h  GraphicAttackSound.h  GraphicDelta.h  PlayerColour.h  RandomMap.h  Research.h  ResourceUsage.h  Sound.h  SoundItem.h  TechTree.h  Techage.h  TechageEffect.h  Terrain.h  TerrainBlock.h  TerrainBorder.h  TerrainCommon.h  TerrainPassGraphic.h  TerrainRestriction.h  Unit.h  UnitCommand.h  UnitHeader.h  UnitLine.h
include/genie/file/: Compressor.h  IFile.h  ISerializable.h
include/genie/lang/: LangFile.h
include/genie/resource/: BinaFile.h  Color.h  DrsFile.h  PalFile.h  SlpFile.h  SlpFrame.h
include/genie/script/: ScnFile.h
include/genie/util/: Logger.h
include/sdk/: Readme.txt
include/sdk/glmgr/: cglmtex.cpp  glmgrcocoa.mm
include/wololo/: datPatch.h  fix.h
libwololokingdoms/: CMakeLists.txt  Makefile  README.md  base64.cpp  base64.h  caseless.h  drs.h  drs_creator.cpp  drs_creator.h  fs.cpp  libwololokingdoms.cpp  libwololokingdoms.h  md5.cpp  md5.h  missing_strings.cpp  missing_strings.h  platform.h  slp.h  string_helpers.cpp  string_helpers.h  wk_xml.cpp  wk_xml.h  wkconverter.cpp  wkconverter.h  wksettings.h  zr_map_creator.cpp  zr_map_creator.h
libwololokingdoms/cmake/: HasWorkingFilesystem.cmake
libwololokingdoms/cmake/tests/: has_filesystem.cpp
libwololokingdoms/fixes/: addunits.cpp  addunits.h  ai900unitidfix.cpp  ai900unitidfix.h  aztecbonusfix.cpp  aztecbonusfix.h  balance.cpp  balance.h  berbersutfix.cpp  berbersutfix.h  burmesefix.cpp  burmesefix.h  cuttingfix.cpp  cuttingfix.h  demoshipfix.cpp  demoshipfix.h  disablenonworkingunits.cpp  disablenonworkingunits.h  ethiopiansfreepikeupgradefix.cpp  ethiopiansfreepikeupgradefix.h  feitoriafix.cpp  feitoriafix.h  hotkeysfix.cpp  hotkeysfix.h  houseattackfix.cpp  houseattackfix.h  khmerfix.cpp  khmerfix.h  malayfix.cpp  malayfix.h  maliansfreeminingupgradefix.cpp  maliansfreeminingupgradefix.h  nomadsfix.cpp  nomadsfix.h  portuguesefix.cpp  portuguesefix.h  queuetechs.cpp  queuetechs.h  separateshipgraphics.cpp  separateshipgraphics.h  (+14 more)
libwololokingdoms/include/: fs.h
libwololokingdoms/include/wololo/: Drs.h  datPatch.h
resources/: Flags.txt  WK.xml  WK1.xml  WK2.xml  WK3.xml  WKFlags.txt  en.txt  language.ini  player1.hki  player1.nfz  player1_age2hd.hki  player3.nfz  version.txt
resources/Script.AI/: Barbarian.per  BruteForce3.1.per  Immobile Units AI GOLD.per  Promi.per
resources/Script.AI/Barbarian/: AztecSuperRush.per  Castles.per  Commands.per  CommandsTG.per  DMConstants.per  DeathMatch.per  Drush.per  FlankAggressiveness.per  HardestCheats.per  KnightRush.per  MIX.per  MayanEagleRush.per  Micro.per  MonksAndTrebs.per  OnlyMeso.per  PocketAggressiveness.per  RaidTheCamps.per  Resigning.per  RuleBuffer.per  SLING.per  ScoutArcher.per  Strategies1v1.per  StrategiesTG.per  SuicidalKnightRush.per  TheGreatWall.per  UnusualSwitch.per  WallAndBoom.per  WonderAssault.per  WonderVictory.per
resources/Script.AI/Brutal2/: ARCHERUU.per  ARENA_FASTIMP.per  BOOMING.per  BURMESE1.per  BURMESE2.per  CAMEL.per  CASTLED.per  CASTLENAVY.per  CAStrategy.per  CAVALRYUU.per  CELTICSCHO1.per  CELTICSCHO2.per  CHAT.per  CHAT1.per  CHAT2.per  CHAT3.per  CONQ.per  EEWBOOM.per  EagleRush.per  FEUDALNAVY.per  GenericAra.per  HCA.per  IMPEAGLE.per  INFANTRYUU.per  ImpS.per  KHMER1.per  KLEW.per  Krush.per  LSR.per  MAA.per  PALADIN.per  Scrush.per  Skirms.per  TRASH.per  UserPatchConst.per  WNomadBog.per  XBOW.per
resources/Script.AI/Promi/: boarhunting.per  buildings.per  const.per  dawn.per  escrow.per  gatherers.per  general.per  init.per  interaction.per  onevone.per  researches.per  resign.per  threats.per  trade.per  tsa.per  units.per  wololo.per
resources/Script.RM/: WK_Arabia.rms  WK_Arena.rms  WK_Black_Forest.rms  WK_Blind_Random.rms  WK_GoldRush.rms  WK_Islands.rms  WK_Nomad.rms  WK_Team_Islands.rms
resources/gamedata_x1/: 54000.bina  54101.bina  54102.bina  54103.bina  54201.bina  54202.bina  54203.bina  54204.bina  54205.bina  54206.bina  54207.bina  54208.bina  54209.bina  54210.bina  54211.bina  54212.bina  54213.bina  54216.bina  54217.bina  54218.bina  54219.bina  54220.bina  54221.bina  54222.bina  54223.bina  54225.bina  54226.bina  54227.bina  54228.bina  55001.bina  55002.bina  55003.bina  55004.bina  55005.bina  55006.bina  55007.bina  55008.bina  55009.bina  55010.bina  56001.bina  (+10 more)
resources/graphics/architecture/: 33247.slp  33250.slp  34246.slp  34247.slp  34249.slp  34250.slp  41332.slp  41334.slp  451.slp  452.slp  454.slp  457.slp  458.slp
resources/graphics/huds/: 50163.slp  50342.slp  51000.slp  51164.slp  51165.slp  51166.slp  (+13 more)
resources/improved-tooltips/: de.ini  en.ini  es.ini  it.ini  zh.ini
resources/locales/: de_game.txt  en.txt  en_game.txt  turkish.ini  zh.txt  zh_game.txt
(+382 files in other folders)
